# ethereum-rpc-lib-esp32

./: CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  main.c
main/abi/: FarmKeeper.json
main/ethereum-lib/: eth_abi.c  eth_abi.h  eth_rpc.c  eth_rpc.h  eth_sign.c  eth_sign.h  net_test.c  net_test.h  web3.c  web3.h
main/farmkeeper-rpc/: CMakeLists.txt  farmkeepercore.h
main/farmkeeper-rpc/device/: device.c  device.h
